{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 24,
  "lineage": "cd0fe5e1-16f3-f14d-994b-ba32707c7a30",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:vpc/vpc-0678d20b56f68eb5e",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0b44713057ddf7530",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0303b15f72fb3bca8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0678d20b56f68eb5e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-040724cce6e4b09ab",
            "owner_id": "127214193754"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "deploy_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/138f1d4d2cb267a2",
            "arn_suffix": "targetgroup/tf-target-group/138f1d4d2cb267a2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:127214193754:targetgroup/tf-target-group/138f1d4d2cb267a2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-target-group",
            "port": 9200,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_elasticip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "deploy_elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b73a2b83891a7e31",
            "arn": "arn:aws:ec2:us-east-2:127214193754:elastic-ip/eipalloc-0b73a2b83891a7e31",
            "domain": "vpc",
            "id": "eipalloc-0b73a2b83891a7e31",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-129-82-203.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.82.203",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "deploy-elasticip"
            },
            "tags_all": {
              "Name": "deploy-elasticip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.deploy_peering_default",
      "mode": "managed",
      "type": "aws_route",
      "name": "deploy_peering_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-040724cce6e4b09ab179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040724cce6e4b09ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0e7d5a0f19fd26823"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.deploy_vpc_peering.aws_vpc_peering_connection.deploy_vpc_peering"
          ]
        }
      ]
    },
    {
      "module": "module.deploy_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "deploy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:vpc/vpc-007eccd2eb430ae03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0686e2135d251df3f",
            "default_route_table_id": "rtb-027f870b63fbf404d",
            "default_security_group_id": "sg-0d883baf4542a0d02",
            "dhcp_options_id": "dopt-0303b15f72fb3bca8",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007eccd2eb430ae03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027f870b63fbf404d",
            "owner_id": "127214193754",
            "tags": {
              "Name": "deploy"
            },
            "tags_all": {
              "Name": "deploy"
            }
          }
        }
      ]
    },
    {
      "module": "module.deploy_vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "deploy_vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0e7d5a0f19fd26823",
            "peer_owner_id": "127214193754",
            "peer_region": "us-east-2",
            "peer_vpc_id": "vpc-0678d20b56f68eb5e",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "deploy-peering"
            },
            "tags_all": {
              "Name": "deploy-peering"
            },
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface_private1",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:network-interface/eni-0ac76c3f1bb2f8dea",
            "id": "eni-0ac76c3f1bb2f8dea",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:fe:85:07:17:a9",
            "owner_id": "127214193754",
            "private_ip": "10.0.0.38",
            "private_ip_list": [
              "10.0.0.38"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.38"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01e26aa11b3dbcfba"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a934246b46a5802c",
            "tags": {
              "Name": "deploy_private1_network_interface"
            },
            "tags_all": {
              "Name": "deploy_private1_network_interface"
            }
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.security_group_private1.aws_security_group.security_group",
            "module.subnet_private1.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface_private2",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:network-interface/eni-0eda16628872b8a1d",
            "id": "eni-0eda16628872b8a1d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:ca:0a:a2:3a:7d",
            "owner_id": "127214193754",
            "private_ip": "10.0.1.193",
            "private_ip_list": [
              "10.0.1.193"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.193"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0e4b0a9d758a22cb5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0654a8d3b4f143431",
            "tags": {
              "Name": "deploy_private2_network_interface"
            },
            "tags_all": {
              "Name": "deploy_private2_network_interface"
            }
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc",
            "module.security_group_private2.aws_security_group.security_group",
            "module.subnet_private2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_private1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:security-group/sg-01e26aa11b3dbcfba",
            "description": "Allow HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01e26aa11b3dbcfba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ingress",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              }
            ],
            "name": "web-server-sg-private1-tf",
            "name_prefix": "",
            "owner_id": "127214193754",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_private2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:security-group/sg-0e4b0a9d758a22cb5",
            "description": "Allow HTTPS to web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4b0a9d758a22cb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "kibana ingress",
                "from_port": 5601,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5601
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-server-sg-private2-tf",
            "name_prefix": "",
            "owner_id": "127214193754",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0a934246b46a5802c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a934246b46a5802c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_private2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0654a8d3b4f143431",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0654a8d3b4f143431",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-037ec0bbe2477a93c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037ec0bbe2477a93c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1-subnet"
            },
            "tags_all": {
              "Name": "public1-subnet"
            },
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_public2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:127214193754:subnet/subnet-0e0980b062181ff98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e0980b062181ff98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "127214193754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2-subnet"
            },
            "tags_all": {
              "Name": "public2-subnet"
            },
            "vpc_id": "vpc-007eccd2eb430ae03"
          },
          "dependencies": [
            "module.deploy_vpc.aws_vpc.deploy_vpc"
          ]
        }
      ]
    }
  ]
}